[gd_scene load_steps=18 format=2]

[ext_resource path="res://interface/new-prof-select/NewProficiencySelectionScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/interfaces/character-select/background.png" type="Texture" id=2]
[ext_resource path="res://fonts/roboto_24.tres" type="DynamicFontData" id=3]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/a.png" type="Texture" id=4]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/b.png" type="Texture" id=5]
[ext_resource path="res://assets/interfaces/command-input/xbox-buttons/x.png" type="Texture" id=6]
[ext_resource path="res://assets/interfaces/command-input/right.png" type="Texture" id=7]
[ext_resource path="res://assets/interfaces/command-input/down.png" type="Texture" id=8]
[ext_resource path="res://assets/interfaces/command-input/left.png" type="Texture" id=9]
[ext_resource path="res://assets/interfaces/command-input/up.png" type="Texture" id=10]
[ext_resource path="res://assets/interfaces/new-prof-select/green-star.png" type="Texture" id=11]
[ext_resource path="res://assets/interfaces/new-prof-select/red-star.png" type="Texture" id=12]
[ext_resource path="res://interface/new-prof-select/NewProfSelectionPlayerHUD.tscn" type="PackedScene" id=13]
[ext_resource path="res://music/DirectorySoundPlayer.gd" type="Script" id=14]
[ext_resource path="res://interface/back-arrow.tscn" type="PackedScene" id=15]

[sub_resource type="DynamicFont" id=1]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="NewProficiencySelectionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
z_index = -1

[node name="bgd" type="TextureRect" parent="Node2D"]
margin_left = -44.3688
margin_top = -34.27
margin_right = 1875.63
margin_bottom = 1045.73
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="footer" type="Control" parent="."]
editor/display_folded = true
margin_left = 135.18
margin_top = 153.56
margin_right = 175.18
margin_bottom = 193.56
rect_scale = Vector2( 0.75, 0.75 )

[node name="confirm" type="Label" parent="footer"]
margin_left = -123.473
margin_top = 554.152
margin_right = 148.527
margin_bottom = 585.152
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Confirm Selection"

[node name="mjaor-prof" type="Label" parent="footer"]
margin_left = 460.421
margin_top = 550.072
margin_right = 732.421
margin_bottom = 589.072
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Select Proficiency 
Set"

[node name="unconfirm" type="Label" parent="footer"]
margin_left = 50.2943
margin_top = 555.504
margin_right = 322.294
margin_bottom = 594.504
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Unconfirm"

[node name="random" type="Label" parent="footer"]
margin_left = 200.961
margin_top = 555.504
margin_right = 472.961
margin_bottom = 594.504
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Random Proficiency"

[node name="minor-prof" type="Label" parent="footer"]
margin_left = 713.529
margin_top = 551.396
margin_right = 985.529
margin_bottom = 590.396
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Select Hybrid
Proficiency"

[node name="adv" type="Label" parent="footer"]
margin_left = 904.355
margin_top = 556.368
margin_right = 1176.35
margin_bottom = 595.368
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Advantage"

[node name="disa" type="Label" parent="footer"]
margin_left = 1056.35
margin_top = 556.368
margin_right = 1328.35
margin_bottom = 595.368
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Disadvantage"

[node name="A-btn" type="TextureRect" parent="footer"]
margin_left = -162.719
margin_top = 543.003
margin_right = -112.719
margin_bottom = 590.003
texture = ExtResource( 4 )

[node name="B-btn" type="TextureRect" parent="footer"]
margin_left = 10.2143
margin_top = 543.003
margin_right = 60.2143
margin_bottom = 590.003
texture = ExtResource( 5 )

[node name="X-btn" type="TextureRect" parent="footer"]
margin_left = 136.881
margin_top = 543.003
margin_right = 186.881
margin_bottom = 590.003
texture = ExtResource( 6 )

[node name="right-btn" type="TextureRect" parent="footer"]
margin_left = 401.989
margin_top = 534.194
margin_right = 486.989
margin_bottom = 581.194
texture = ExtResource( 7 )

[node name="down-btn" type="TextureRect" parent="footer"]
margin_left = 656.878
margin_top = 552.111
margin_right = 741.878
margin_bottom = 599.111
texture = ExtResource( 8 )

[node name="left-btn" type="TextureRect" parent="footer"]
margin_left = 403.773
margin_top = 564.111
margin_right = 488.773
margin_bottom = 611.111
texture = ExtResource( 9 )

[node name="up-btn" type="TextureRect" parent="footer"]
margin_left = 634.773
margin_top = 552.111
margin_right = 719.773
margin_bottom = 599.111
texture = ExtResource( 10 )

[node name="green-star" type="TextureRect" parent="footer"]
margin_left = 850.221
margin_top = 546.044
margin_right = 886.221
margin_bottom = 586.044
texture = ExtResource( 11 )

[node name="red-star" type="TextureRect" parent="footer"]
margin_left = 1008.22
margin_top = 546.044
margin_right = 1044.22
margin_bottom = 586.044
texture = ExtResource( 12 )

[node name="NewProfSelectionPlayer1HUD" parent="." instance=ExtResource( 13 )]
margin_left = 22.0
margin_top = 85.0
margin_right = 22.0
margin_bottom = 85.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="NewProfSelectionPlayer2HUD" parent="." instance=ExtResource( 13 )]
margin_left = 624.0
margin_top = 85.0
margin_right = 624.0
margin_bottom = 85.0
rect_scale = Vector2( 0.8, 0.8 )
inputDeviceId = "P2"
player = 1

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -121.5
margin_right = 347.5
margin_bottom = 60.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.674422, 0.882813, 0.589691, 1 )
text = "Proficency Selection"

[node name="sfxPlayer" type="Node" parent="."]
script = ExtResource( 14 )
soundDirectory = "res://assets/sounds/sfx/ui/menu-cursor/"

[node name="back-arrow" parent="." instance=ExtResource( 15 )]
visible = false
margin_left = -15.8239
margin_top = 508.818
margin_right = 129.176
margin_bottom = 636.818
